# project-temp

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Code.code-workspace  LICENSE  README.md  code.code-workspace  example.gitignore  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  python.code-workspace  sitemap.xml
.github/workflows/: ci.yml
config/: code.code-workspace  configs.toml.example  latex.code-workspace
docker/: Dockerfile  docker-compose.yml  requirements.txt  vscode-extensions
docs/: index.md  readme.md
javascript/: mathjax.js
notebooks/: 01_test.ipynb
readme/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/config/: index.html
reference/env_test/: index.html
reference/utils/: index.html
reference/utils/plot_utils/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/: config.py  const.py  env_test.py
src/utils/: plot_utils.py
