[project]
name = "project-temp"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "AdamZh0u", email = "zhouzz400@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "jupyterlab>=4.3.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
# uv add --group dev pytest
# uc sync --group docs
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material[imaging]>=9.6.7",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings-python>=1.16.2",
]

# [build-system]
# requires = ["uv"]
# build-backend = "uv"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
